--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.kite.joco.flowretro1" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.write_external_storage"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
